<resources>
    <string name="app_name">Wan Android</string>
    <string name="home_page">首页</string>
    <string name="home_system">体系</string>
    <string name="official_account">博客</string>
    <string name="home_plaza">广场</string>
    <string name="home_mine">我的</string>
    <string name="home_project">项目</string>
    <string name="home_navigation">导航</string>
    <string name="newest_project">最新项目</string>
    <string name="stick">置顶</string>

    <string name="login_immediately">登录/注册</string>
    <string name="user_id">ID:&#32;%d</string>
    <string name="user_ranking">排名: </string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="edit_data">编辑资料</string>
    <string name="avatar">头像</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="againPassword">确认密码</string>
    <string name="go_to_register">去注册</string>
    <string name="account_can_not_be_empty">账号不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="account_length_over_three">账号不能少于3位</string>
    <string name="password_length_over_six">密码不能少于6位</string>
    <string name="confirm_password_can_not_be_empty">确认密码不能为空</string>
    <string name="two_password_are_inconsistent">两次输入的密码不一致</string>
    <string name="avatar_setting">设置头像</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="anonymous">匿名</string>
    <string name="my_integral">我的积分</string>
    <string name="integral_ranking">积分排行</string>
    <string name="my_share">我的分享</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_ku_tu">我的酷图</string>
    <string name="my_tool">我的工具</string>
    <string name="theme">主题风格</string>
    <string name="nigh_mode">夜间模式</string>
    <string name="light_mode">日间模式</string>
    <string name="open_source_licenses">开源协议</string>
    <string name="project_home_page">项目主页</string>
    <string name="browsing_history">浏览历史</string>
    <string name="theme_user">使用</string>
    <string name="theme_user_ing">使用中</string>
    <string name="theme_white">白色</string>
    <string name="theme_red">红色</string>
    <string name="theme_pink">粉色</string>
    <string name="theme_orange">橙色</string>
    <string name="theme_blue">蓝色</string>
    <string name="theme_green">绿色</string>
    <string name="theme_cyan">青色</string>
    <string name="theme_purple">紫色</string>
    <string name="theme_brown">棕色</string>
    <string name="submit">提交</string>
    <string name="share_article">分享文章</string>
    <string name="title">标题</string>
    <string name="title_hint">请输入您要分享的文章标题，100字以内。</string>
    <string name="link_hint">请输入您要分享的文章链接。</string>
    <string name="title_toast">文章标题不能为空</string>
    <string name="link_toast">文章链接不能为空</string>
    <string name="link">链接</string>
    <string name="share_people">分享人</string>
    <string name="tips">温馨提示</string>
    <string name="tips_content">1.只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场tab；\n2.CSDN、掘金、简书等官方博客站点会直接通过，不需要审核；\n3.其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;\n4.目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好；\n5.由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系&#8230;</string>
    <string name="share_article_success">文章分享成功</string>
    <string name="sharing_article">正在分享文章&#8230;</string>
    <string name="delete_article">正在删除文章&#8230;</string>
    <string name="article_delete_success">文章删除成功</string>
    <string name="delete_history">正在删除浏览历史&#8230;</string>
    <string name="history_delete_success">浏览历史删除成功</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="login_loading">正在登录中&#8230;</string>
    <string name="register_loading">正在注册中&#8230;</string>
    <string name="login_success">登录成功&#8230;</string>
    <string name="register_success">注册成功&#8230;</string>
    <string name="level_rank">等级: %1$d\t\t\t排名: %2$d</string>

    <string name="add_collect">加入收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="share">分享</string>
    <string name="open_in_explorer">浏览器打开</string>
    <string name="copy_link">复制链接</string>
    <string name="refresh_page">刷新页面</string>
    <string name="copy_success">复制成功</string>


    <string name="clear_cache">清除缓存</string>
    <string name="check_version">检查版本</string>
    <string name="about_wanandroid">关于玩安卓</string>
    <string name="abount_us">关于我们</string>
    <string name="confirm_clear_cache">确认清除缓存？</string>
    <string name="confirm_delete_shared">确认删除分享?</string>
    <string name="confirm_delete_history">确认删除浏览历史？</string>
    <string name="confirm_night_mode_form_system">确认取消自动夜间模式？</string>
    <string name="current_version">当前版本%1$s</string>
    <string name="already_latest_version">已是最新版</string>
    <string name="stay_tuned">敬请期待&#8230;</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="setting_user_msg">个人信息设置</string>
    <string name="night_mode_form_system">自动夜间模式</string>

    <string name="search_hint">搜索关键词以空格隔开</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="press_again_to_exit">再按一次退出</string>
</resources>
