<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/home_page"
            tools:ignore="UnusedNavigation">
    <fragment
            android:id="@+id/home_page"
            android:name="com.wwy.android.ui.homepage.HomePageFragment"
            android:label="@string/home_page"
            tools:layout="@layout/fragment_main"/>

    <fragment
            android:id="@+id/home_system"
            android:label="@string/home_system"
            android:name="com.wwy.android.ui.homesyetem.HomeSystemFragment"
            tools:layout="@layout/fragment_home_system"/>

    <fragment
            android:id="@+id/home_plaza"
            android:label="@string/official_account"
            android:name="com.wwy.android.ui.homeplaza.MainPlazaFragment"
            tools:layout="@layout/fragment_plaza"/>

    <fragment
            android:id="@+id/home_mine"
            android:label="@string/home_mine"
            android:name="com.wwy.android.ui.homemine.MyHomePageFragment"
            tools:layout="@layout/fragment_my_home_page">

    </fragment>
</navigation>
