<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.wwy.wanandroid.view.CustomNavigationBarView
            android:id="@+id/navigation_bar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isShow_right_img1="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:left_textId="@string/home_mine" />

    <View
            android:id="@+id/view_user_bg"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigation_bar_view"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/wwy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigation_bar_view" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_immediately"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/login_immediately"
            android:textColor="@color/primary_text_color_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_user_id"
            app:layout_constraintStart_toEndOf="@id/iv_user_icon"
            app:layout_constraintTop_toTopOf="@id/iv_user_icon" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textColor="@color/primary_text_color_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_user_icon"
            app:layout_constraintStart_toStartOf="@id/tv_login_immediately"
            app:layout_constraintTop_toBottomOf="@id/tv_login_immediately" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/user_ranking"
            android:textColor="@color/primary_text_color_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_user_icon"
            app:layout_constraintStart_toEndOf="@id/tv_user_id"
            app:layout_constraintTop_toTopOf="@id/tv_user_id" />


</androidx.constraintlayout.widget.ConstraintLayout>