<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <com.wwy.wanandroid.view.CustomNavigationBarView
            android:id="@+id/custom_navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isShow_left_img="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:left_textId="@string/login" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            style="@style/TextInputLayout"
            android:layout_marginTop="80dp"
            android:hint="@string/username"
            app:layout_constraintTop_toBottomOf="@id/custom_navigation_bar"
            tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pswLayout"
            style="@style/TextInputLayout"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/userNameLayout"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/goRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/go_to_register"
            android:textColor="@color/secondray_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pswLayout" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goRegister"
            tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>